<resources>
    <string name="app_name">LinkSaver</string>
    <string name="searchbar_hint">Search For Link</string>
    <string name="archive">Archive</string>
    <string name="bin">Bin</string>
    <string name="icon_des">Website Icon</string>
    <string name="thumbnail_des">"Thumbnail "</string>
    <string name="enter_link">Enter valid link</string>
    <string name="add">Add</string>
    <string name="link">Link</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="deleteSelected">Delete selected?</string>
    <string name="restore">Restore</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="restore_all">Restore All</string>
    <string name="unarchive">Unarchive</string>
    <string name="info">Info</string>
    <string name="auto_delete">"Auto delete in 30 days !! "</string>
    <string name="settings">Setting</string>
    <string name="about">About</string>
    <string name="short_description">Short Description (Optional)</string>
    <string name="publishers_name">By Aiyu</string>
    <string name="full_version">Version 1.0</string>
    <string name="blank">" "</string>
    <string name="git">Github</string>
    <string name="whats_new">What\'s New</string>
    <string name="report">Report</string>
    <string name="about_app">About App</string>
    <string name="github_link">https://github.com/aiyu-ayaan/LinkSaver</string>
    <string name="release_link">https://github.com/aiyu-ayaan/LinkSaver/releases</string>
    <string name="issue_link">https://github.com/aiyu-ayaan/LinkSaver/issues</string>
    <string name="welcome_with_app_name">Welcome to Link Saver</string>
    <string name="welcome_with_account_des">Create an account to save your saved links</string>
    <string name="skip">Skip</string>
    <string name="log_out">Logout</string>
    <string name="log_out_message">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">Profile</string>
    <string name="back_up">BackUp</string>
    <string name="back_up_settings">Back Settings</string>
    <string name="back_up_now">BackUp Now</string>
    <string name="last_backup">Last backup</string>
    <string name="back_up_in_progress">Backup in progress…</string>
    <string name="last_backup_s">Last Backup: %s</string>
    <string name="never">Never</string>
    <string name="log_in">Log In</string>
    <string name="log_in_backup_message">You need to log in to your Google account to perform this action</string>
    <string name="cancel">Cancel</string>
    <string name="restore_description">It will restore all your saved links !!</string>
    <string name="loading">Loading !!!!</string>
</resources>