<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.atech.linksaver.ui.fragment.backup.BackUpFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/round_close_24"
        app:title="@string/back_up_settings"
        app:titleCentered="true" />

    <TextView
        android:id="@+id/tv_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginHorizontal="@dimen/grid_1"
        android:layout_marginTop="@dimen/grid_1"
        android:drawablePadding="@dimen/grid_1"
        android:padding="@dimen/grid_1"
        android:text="@string/last_backup"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/round_backup_24"
        app:drawableTint="@color/caption_color" />

    <TextView
        android:id="@+id/tv_backup_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_backup"
        tools:text="@string/last_backup_s"
        android:padding="@dimen/grid_1"
        android:layout_marginHorizontal="@dimen/grid_1"
        android:layout_marginTop="@dimen/grid_1"
        android:drawablePadding="@dimen/grid_1" />

    <Button
        android:id="@+id/btn_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_backup_date"
        android:layout_marginHorizontal="@dimen/grid_1"
        android:layout_marginTop="@dimen/grid_1"
        android:text="@string/back_up_now" />
</RelativeLayout>