<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    android:transitionGroup="true"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    tools:context="com.atech.linksaver.ui.fragment.detail.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/grid_1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButtonClose"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?colorSurface"
                app:icon="@drawable/round_close_24"
                app:iconTint="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButtonOpen"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/grid_1"
                android:backgroundTint="?colorSurface"
                android:paddingHorizontal="@dimen/grid_2"
                app:icon="@drawable/round_open_in_new_24"
                app:iconTint="?attr/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/materialButtonDelete"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButtonShare"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/grid_1"
                android:backgroundTint="?colorSurface"
                android:paddingHorizontal="@dimen/grid_2"
                app:icon="@drawable/outline_share_24"
                app:iconTint="?attr/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/materialButtonOpen"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButtonDelete"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?colorSurface"
                app:cornerRadius="@dimen/grid_1"
                app:icon="@drawable/outline_delete_24"
                app:iconTint="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButtonSave"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="?colorSurface"
                android:padding="@dimen/grid_3"
                app:cornerRadius="@dimen/grid_1"
                app:icon="@drawable/round_save_24"
                app:iconTint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_input_layout_link" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginEnd="@dimen/grid_1"
                android:hint="@string/link"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/materialButtonSave"
                app:layout_constraintStart_toStartOf="@+id/materialButtonClose"
                app:layout_constraintTop_toBottomOf="@+id/materialButtonClose">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_short_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginEnd="@dimen/grid_1"
                android:hint="@string/short_description"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/materialButtonClose"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_link">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_filter"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginEnd="@dimen/grid_1"
                android:hint="@string/filter_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/materialButtonClose"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_short_description">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                app:dividerColor="@color/divider"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_filter" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                app:cardBackgroundColor="?attr/colorSurface"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider"
                tools:layout_editor_absoluteX="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/grid_1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewIcon"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_marginEnd="@dimen/grid_1"
                            android:contentDescription="@string/icon_des"
                            tools:src="@drawable/avatar_svgrepo_com" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/grid_1"
                            android:layout_marginBottom="@dimen/grid_1"
                            android:hint="@string/title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:focusable="false"
                                android:inputType="textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/grid_1"
                        android:layout_marginBottom="@dimen/grid_1"
                        android:hint="@string/description">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:focusable="false"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/imageViewThumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/thumbnail_image_size"
                        android:contentDescription="@string/thumbnail_des"
                        tools:srcCompat="@tools:sample/avatars" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>